--- a/tff/convert/helpers.html
+++ b/tff/convert/helpers.html
@@ -31,7 +31,7 @@ crossorigin>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L1-L875" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L1-L883" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">import re
 from textwrap import dedent
@@ -688,6 +688,7 @@ def lookupSource(cv, cur, tokenAsSlot, specs):
         The first component may have a tag name that has `@` plus an attribute name
         appended to it. That means that the information will be extracted from
         that attribute, not from the content of the element.
+        If the attribute is not present, no feature value will be created.
     &#34;&#34;&#34;
     nest = cur[XNEST]
     nNest = len(nest)
@@ -735,8 +736,11 @@ def lookupSource(cv, cur, tokenAsSlot, specs):
 
         sourceNode = cur[TNEST][-1]
         slots = cv.linked(sourceNode)
-        sourceText = (
-            (
+
+        skip = False
+
+        if extractAttr is None:
+            sourceText = (
                 &#34;&#34;.join(
                     cv.get(&#34;str&#34;, (T, slot)) + cv.get(&#34;after&#34;, (T, slot))
                     for slot in slots
@@ -744,19 +748,23 @@ def lookupSource(cv, cur, tokenAsSlot, specs):
                 if tokenAsSlot
                 else &#34;&#34;.join(cv.get(&#34;ch&#34;, (CHAR, slot)) for slot in slots)
             )
-            if extractAttr is None
-            else (
-                int(extractAttr)
-                if extractAttr.isdecimal()
-                else (
-                    extractAttr[1:-1]
-                    if extractAttr.startswith(&#34;&lt;&#34;) and extractAttr.endswith(&#34;&gt;&#34;)
-                    else (cv.get(extractAttr, sourceNode) or &#34;&#34;).strip()
-                )
-            )
-        )
-        source = {feature: sourceText}
-        cv.feature(targetNode, **source)
+        else:
+            if extractAttr.isdecimal():
+                sourceText = int(extractAttr)
+            else:
+                if extractAttr.startswith(&#34;&lt;&#34;) and extractAttr.endswith(&#34;&gt;&#34;):
+                    sourceText = extractAttr[1:-1]
+                else:
+                    sourceText = cv.get(extractAttr, sourceNode)
+
+                    if sourceText is None:
+                        skip = True
+                    else:
+                        sourceText = sourceText.strip()
+
+        if not skip:
+            source = {feature: sourceText}
+            cv.feature(targetNode, **source)
 
 
 def getPageInfo(pageInfoDir, zoneBased, manifestLevel):
@@ -1042,7 +1050,7 @@ or by elements within a single TEI source file.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L265-L340" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L265-L340" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def checkModel(kind, thisModel, verbose):
     modelDefault = (
@@ -1130,7 +1138,7 @@ or by elements within a single TEI source file.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L850-L875" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L858-L883" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getImageLocations(app, prod, silent):
     repoLocation = app.repoLocation
@@ -1168,7 +1176,7 @@ or by elements within a single TEI source file.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L797-L847" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L805-L855" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getImageSizes(scanRefDir, doCovers, silent):
     sizeInfo = {}
@@ -1231,7 +1239,7 @@ or by elements within a single TEI source file.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L727-L794" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L735-L802" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getPageInfo(pageInfoDir, zoneBased, manifestLevel):
     if pageInfoDir is None:
@@ -1311,7 +1319,7 @@ or by elements within a single TEI source file.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L222-L237" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L222-L237" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getWhites(text):
     match = W_BEFORE.match(text)
@@ -1377,13 +1385,14 @@ Each component is a tuple of</p>
 </ul>
 <p>The first component may have a tag name that has <code>@</code> plus an attribute name
 appended to it. That means that the information will be extracted from
-that attribute, not from the content of the element.</p>
+that attribute, not from the content of the element.
+If the attribute is not present, no feature value will be created.</p>
 </dd>
 </dl></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L606-L724" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L606-L732" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def lookupSource(cv, cur, tokenAsSlot, specs):
     &#34;&#34;&#34;Looks up information from the current XML stack.
@@ -1435,6 +1444,7 @@ that attribute, not from the content of the element.</p>
         The first component may have a tag name that has `@` plus an attribute name
         appended to it. That means that the information will be extracted from
         that attribute, not from the content of the element.
+        If the attribute is not present, no feature value will be created.
     &#34;&#34;&#34;
     nest = cur[XNEST]
     nNest = len(nest)
@@ -1482,8 +1492,11 @@ that attribute, not from the content of the element.</p>
 
         sourceNode = cur[TNEST][-1]
         slots = cv.linked(sourceNode)
-        sourceText = (
-            (
+
+        skip = False
+
+        if extractAttr is None:
+            sourceText = (
                 &#34;&#34;.join(
                     cv.get(&#34;str&#34;, (T, slot)) + cv.get(&#34;after&#34;, (T, slot))
                     for slot in slots
@@ -1491,19 +1504,23 @@ that attribute, not from the content of the element.</p>
                 if tokenAsSlot
                 else &#34;&#34;.join(cv.get(&#34;ch&#34;, (CHAR, slot)) for slot in slots)
             )
-            if extractAttr is None
-            else (
-                int(extractAttr)
-                if extractAttr.isdecimal()
-                else (
-                    extractAttr[1:-1]
-                    if extractAttr.startswith(&#34;&lt;&#34;) and extractAttr.endswith(&#34;&gt;&#34;)
-                    else (cv.get(extractAttr, sourceNode) or &#34;&#34;).strip()
-                )
-            )
-        )
-        source = {feature: sourceText}
-        cv.feature(targetNode, **source)</code></pre>
+        else:
+            if extractAttr.isdecimal():
+                sourceText = int(extractAttr)
+            else:
+                if extractAttr.startswith(&#34;&lt;&#34;) and extractAttr.endswith(&#34;&gt;&#34;):
+                    sourceText = extractAttr[1:-1]
+                else:
+                    sourceText = cv.get(extractAttr, sourceNode)
+
+                    if sourceText is None:
+                        skip = True
+                    else:
+                        sourceText = sourceText.strip()
+
+        if not skip:
+            source = {feature: sourceText}
+            cv.feature(targetNode, **source)</code></pre>
 </details>
 </dd>
 <dt id="tff.convert.helpers.matchModel"><code class="name flex">
@@ -1514,7 +1531,7 @@ that attribute, not from the content of the element.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L343-L359" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L343-L359" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def matchModel(properties, tag, atts):
     if tag == properties[&#34;element&#34;]:
@@ -1543,7 +1560,7 @@ that attribute, not from the content of the element.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L258-L262" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L258-L262" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def repTokens(tokens):
     text = []
@@ -1560,7 +1577,7 @@ that attribute, not from the content of the element.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L362-L413" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L362-L413" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def setUp(kind):
     helpText = f&#34;&#34;&#34;
@@ -1624,7 +1641,7 @@ that attribute, not from the content of the element.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L240-L255" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L240-L255" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def tokenize(line):
     tokens = []
@@ -1652,7 +1669,7 @@ that attribute, not from the content of the element.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/544d43e7f7f7ecd7a8f148092cd0d3a62c07d977/tff/convert/helpers.py#L416-L603" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/f98dffab07a121ac8a2d097f3a51b2099a959d1c/tff/convert/helpers.py#L416-L603" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def tweakTrans(
     template,
